--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "an application to track your plants",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.9.1",
+    "bootstrap": "^3.3.6",
     "express": "4.13.4",
     "history": "^1.17.0",
     "mongodb": "^2.1.4",
@@ -16,6 +18,7 @@
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^2.1.0",
     "redux": "^3.0.6",
+    "redux-promise": "^0.5.1",
     "router": "^1.1.4",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
@@ -27,7 +30,8 @@
     "babel-preset-react": "^6.3.13"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
