--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "an application to track your plants",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "4.13.4",
     "history": "^1.17.0",
+    "jwt-simple": "0.4.1",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.7",
     "react": "^0.14.6",
