--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "an application to track your plants",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "express": "4.13.4",
     "history": "^1.17.0",
     "jwt-simple": "0.4.1",
+    "kerberos": "0.0.18",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.7",
     "react": "^0.14.6",
