--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-node": "^5.0.2",
     "babel-preset-react": "^6.3.13"
   },
   "scripts": {
