--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^2.1.0",
     "redux": "^3.0.6",
+    "redux-auth": "0.0.2",
     "redux-promise": "^0.5.1",
     "router": "^1.1.4",
     "webpack": "^1.12.12",
