--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "axios": "^0.9.1",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
-    "bootstrap": "^3.3.6",
     "express": "4.13.4",
     "history": "^1.17.0",
     "jwt-simple": "0.4.1",
     "kerberos": "0.0.18",
+    "material-ui": "^0.14.3",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.7",
     "react": "^0.14.6",
@@ -21,6 +21,7 @@
     "react-router": "^2.0.0-rc5",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^2.1.0",
+    "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.0.6",
     "redux-auth": "0.0.2",
     "redux-promise": "^0.5.1",
