--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.9.1",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
+    "bower": "^1.7.7",
     "express": "4.13.4",
     "history": "^1.17.0",
     "jwt-simple": "0.4.1",
@@ -42,7 +43,8 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
     "test:watch": "npm test -- --watch",
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
