--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "type": "git",
     "url": "git+https://github.com/LivenUp/livenup.git"
   },
+  "engines": {
+    "node": "5.0.0"
+    }
+  },
   "author": "reaction-jackson",
   "license": "MIT",
   "bugs": {
