--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.9.1",
     "bcrypt": "^0.8.5",
+    "bindings": "^1.2.1",
     "body-parser": "^1.14.2",
     "bower": "^1.7.7",
     "express": "4.13.4",
@@ -15,7 +16,7 @@
     "material-ui": "^0.14.3",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.7",
-    "react": "^0.14.6",
+    "react": "^0.14.7",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
