--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
     "test:watch": "npm test -- --watch",
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
