--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
     "redux-promise": "^0.5.1",
     "router": "^1.1.4",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-node": "^5.0.2",
+    "babel-preset-react": "^6.3.13",
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
