--- a/package.json
+++ b/package.json
@@ -29,14 +29,7 @@
     "redux-promise": "^0.5.1",
     "router": "^1.1.4",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1",
-    "babel": "^5.8.20",
-    "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-es2015-node": "^5.0.2",
-    "babel-preset-react": "^6.3.13",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
@@ -46,14 +39,12 @@
     "babel-preset-es2015-node": "^5.0.2",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.5.0",
-    "mocha": "^2.4.5",
-    "webpack-dev-server": "^1.14.1",
+    "mocha": "^2.4.5"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
     "test:watch": "npm test -- --watch",
-    "postinstall": "webpack --config ./webpack-prod.config.js --progress --colors",
-    "start": "node server/index.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
