--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
-    "test:watch": "npm test -- --watch",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
