--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.7",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
