--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-auth": "0.0.2",
     "redux-promise": "^0.5.1",
     "router": "^1.1.4",
+    "socketio": "^1.0.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
